.provarCaches/00D410000011HE0EAM/objects/rootstock__UI_Action__mdt.object
<CustomObject>
    <fields>
        <fullName>rootstock__Action__c</fullName>
        <description>The type of action to be performed.</description>
        <inlineHelpText>The type of action to be performed.</inlineHelpText>
        <label>Action</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Apply Filter</fullName>
                </value>
                <value>
                    <fullName>Enable / Disable Field</fullName>
                </value>
                <value>
                    <fullName>Enable Action</fullName>
                </value>
                <value>
                    <fullName>Field Update</fullName>
                </value>
                <value>
                    <fullName>Set Attributes</fullName>
                </value>
                <value>
                    <fullName>Set Default</fullName>
                </value>
                <value>
                    <fullName>Set Read / Edit</fullName>
                </value>
                <value>
                    <fullName>Show / Hide Section</fullName>
                </value>
                <value>
                    <fullName>Show Toast</fullName>
                </value>
                <value>
                    <fullName>Show Details</fullName>
                </value>
                <value>
                    <fullName>Hide Button</fullName>
                    <label>(Deprecated)</label>
                </value>
                <value>
                    <fullName>Show Message</fullName>
                </value>
                <value>
                    <fullName>Hide Column</fullName>
                </value>
                <value>
                    <fullName>Show / Hide Fields</fullName>
                </value>
                <value>
                    <fullName>Change Field Display Type</fullName>
                </value>
                <value>
                    <fullName>Set Custom Field</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rootstock__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Check to make the action active.</description>
        <inlineHelpText>Check to make the action active.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rootstock__Allow_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, the user is allowed to override the action field values.</description>
        <inlineHelpText>If checked, the user is allowed to override the action field values.</inlineHelpText>
        <label>Allow Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rootstock__Component_Name__c</fullName>
        <description>Specify a Lightning Component Name to show details using that Lightning Component</description>
        <inlineHelpText>Specify a Lightning Component Name to show details using that Lightning Component</inlineHelpText>
        <label>Component Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rootstock__Controller_API_Names__c</fullName>
        <description>The API name(s) of the controlling fields which invokes the action</description>
        <inlineHelpText>The API name(s) of the controlling fields which invokes the action</inlineHelpText>
        <label>Controller API Name(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rootstock__Criteria__c</fullName>
        <defaultValue>&apos;true&apos;</defaultValue>
        <description>The criteria to evaluate for this action to execute. The criteria must be a formula that evaluates to a boolean value.</description>
        <inlineHelpText>The criteria to evaluate for this action to execute. The criteria must be a formula that evaluates to a boolean value.</inlineHelpText>
        <label>Criteria</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rootstock__Description__c</fullName>
        <description>The description of the criteria or purpose of the action.</description>
        <inlineHelpText>The description of the criteria or purpose of the action.</inlineHelpText>
        <label>Description</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rootstock__Display_API_Names__c</fullName>
        <description>Displayable API Name(s) on the generic component.</description>
        <inlineHelpText>Comma separated API name(s)</inlineHelpText>
        <label>Display API Names</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rootstock__Event_Type__c</fullName>
        <description>ON LOAD       =  On rendering the button/field
ON CHANGE =  Value is changed and focus is out of the field, select/unselect a picklist or checkbox
ON FOCUS    =  When the focus is on the button/field
ON INPUT      =  While entering input value</description>
        <inlineHelpText>ON LOAD       =  On rendering the button/field
ON CHANGE =  Value is changed and focus is out of the field, select/unselect a picklist or checkbox
ON FOCUS    =  When the focus is on the button/field
ON INPUT      =  While entering input value</inlineHelpText>
        <label>Event Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ON LOAD &amp; ON CHANGE</fullName>
                    <default>true</default>
                    <label>ON LOAD &amp; ON CHANGE</label>
                </value>
                <value>
                    <fullName>ON LOAD</fullName>
                </value>
                <value>
                    <fullName>ON CHANGE</fullName>
                </value>
                <value>
                    <fullName>ON FOCUS</fullName>
                </value>
                <value>
                    <fullName>ON INPUT</fullName>
                </value>
                <value>
                    <fullName>GRID ON-LOAD</fullName>
                </value>
                <value>
                    <fullName>GRID ON-ROW ADD</fullName>
                </value>
                <value>
                    <fullName>GRID ON-ROW CHANGE</fullName>
                </value>
                <value>
                    <fullName>LOST FOCUS</fullName>
                </value>
                <value>
                    <fullName>GRID ON-SAVE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rootstock__Object_API_Name__c</fullName>
        <description>Object API name to be displayed via component.</description>
        <inlineHelpText>If empty, record object takes precedence.</inlineHelpText>
        <label>Object API Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rootstock__Sequence__c</fullName>
        <description>The sequence in which the action must be executed.</description>
        <inlineHelpText>The sequence in which the action must be executed.</inlineHelpText>
        <label>Sequence</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rootstock__Target_API_Name__c</fullName>
        <description>The API name of the component that the action is performed on.</description>
        <inlineHelpText>The API name of the component that the action is performed on.</inlineHelpText>
        <label>Target API Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rootstock__Target_API_Names__c</fullName>
        <description>The API names of the component that the action is performed on.</description>
        <inlineHelpText>The API names of the component that the action is performed on.</inlineHelpText>
        <label>Target API Names</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rootstock__Target_Value__c</fullName>
        <description>The value to be applied, in the form of a javascript formula or static value.</description>
        <inlineHelpText>The value to be applied, in the form of a javascript formula or static value.</inlineHelpText>
        <label>Target Value</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rootstock__Toast_Body__c</fullName>
        <description>The body that must be shown as the toast content.</description>
        <inlineHelpText>The body that must be shown as the toast content.</inlineHelpText>
        <label>Toast Body</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rootstock__Toast_Type__c</fullName>
        <description>The type of toast that must be displayed.</description>
        <inlineHelpText>The type of toast that must be displayed.</inlineHelpText>
        <label>Toast Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Warning</fullName>
                </value>
                <value>
                    <fullName>Info</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rootstock__UI_Rule__c</fullName>
        <description>The UI Rule that triggers this action.</description>
        <inlineHelpText>The UI Rule that triggers this action.</inlineHelpText>
        <label>UI Rule</label>
        <referenceTo>rootstock__UI_Rule__mdt</referenceTo>
        <relationshipLabel>UI Actions</relationshipLabel>
        <relationshipName>UI_Actions</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <label>UI Action</label>
    <pluralLabel>UI Actions</pluralLabel>
    <validationRules>
        <fullName>rootstock__Action_cannot_be_overridden</fullName>
        <active>true</active>
        <description>Checks if the user is allowed to override the action&apos;s field values.</description>
        <errorConditionFormula>IF(rootstock__Allow_Override__c, false, NOT(rootstock__Active__c))</errorConditionFormula>
        <errorMessage>This action cannot be overridden</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rootstock__Toast_type_cannot_be_set</fullName>
        <active>true</active>
        <description>Action value must be &apos;Show Toast&apos; to set toast type.</description>
        <errorConditionFormula>ISPICKVAL(rootstock__Toast_Type__c, &apos;&apos;) == false &amp;&amp; 
ISPICKVAL(rootstock__Action__c, &apos;Show Toast&apos;) == false</errorConditionFormula>
        <errorDisplayField>rootstock__Toast_Type__c</errorDisplayField>
        <errorMessage>Action value must be &apos;Show Toast&apos;</errorMessage>
    </validationRules>
</CustomObject>